PROJECT (SimpleMITK)
cmake_minimum_required(VERSION 2.8)

FIND_PACKAGE(MITK REQUIRED)
MITK_USE_MODULE(QmitkExt)
MITK_USE_MODULE(MitkExt)

INCLUDE_DIRECTORIES(${ALL_INCLUDE_DIRECTORIES})

#INCLUDE(${MITK_USE_FILE})

LINK_DIRECTORIES(${ALL_LIBRARY_DIRS})

ADD_EXECUTABLE(SimpleMitkQuadview MITKQuadView.cpp)
TARGET_LINK_LIBRARIES(SimpleMitkQuadview ${ALL_LIBRARIES})
